Fix checkstyle issues